--- a/GameLauncherAdmin/Views/CollectionDetailPage.xaml
+++ b/GameLauncherAdmin/Views/CollectionDetailPage.xaml
@@ -19,9 +19,18 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0"
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0"
                    HorizontalAlignment="Center" HorizontalTextAlignment="Center" FontSize="60" Margin="10"
                    Text="{x:Bind ViewModel.Collection.Name,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBlock>
+                <Button Grid.Column="1" Grid.Row="0" Command="{x:Bind ViewModel.RefreshCommand}">
+                    <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE72C;"/>
+                </Button>
+            </Grid>
             <Grid Grid.Row="1" Margin="10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
